--- a/advent2015hs.cabal
+++ b/advent2015hs.cabal
@@ -15,20 +15,23 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     AdventCoins
                      , AlmostLisp
                      , DeliveringPresents
                      , Wrapping
   build-depends:       aeson >= 0.11.2.1
                      , base >= 4.7 && < 5
+                     , bytestring >= 0.10.8.1
                      , containers >= 0.5.7.1
+                     , cryptonite
                      , lens >= 4.14
                      , lens-aeson >= 1.0.0.5
                      , parsec
                      , parsers
                      , text
-                     , wreq
                      , trifecta
+                     , utf8-string >= 1.0.1.1
+                     , wreq
   default-language:    Haskell2010
 
 executable advent2015hs-exe
