--- a/advent2015hs.cabal
+++ b/advent2015hs.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     AdventCoins
                      , AlmostLisp
                      , DeliveringPresents
+                     , NaughtyAndNice
                      , Wrapping
   build-depends:       aeson >= 0.11.2.1
                      , base >= 4.7 && < 5
